# wan2gp-template

./: .bazelrc  BAZEL_CONVERSION_SUMMARY.md  BAZEL_FINAL.md  BAZEL_FINAL_CONFIG.md  BAZEL_README.md  BAZEL_STATUS.md  BAZEL_TROUBLESHOOTING.md  BUILD.bazel  COMPLETE_RESOLUTION_LOG.md  Dockerfile  GENRULE_DIR_FIX.md  MODULE.bazel  WORKSPACE.bazel  clone_wan2gp.py  cuda-base.dockerfile  patch_setup.py
scripts/: BUILD.bazel
