load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build", "docker_push")

genrule(
    name = "patch_wan2gp",
    outs = ["wan2gp_repo"],
    cmd = "git clone https://github.com/deepbeepmeep/Wan2GP.git $@ && sed -i 's/torch.cuda.amp.autocast(/torch.amp.autocast(cuda,/g' $@/models/wan/animate/motion_encoder.py 2>/dev/null || true",
)

pkg_tar(
    name = "wan2gp_tar",
    srcs = [":patch_wan2gp"],
    package_dir = "/opt/Wan2GP",
)

pkg_tar(
    name = "start_scripts",
    srcs = [
        "start-wan2gp.sh",
        "restart-wan2gp.sh",
    ],
    mode = "0755",
    package_dir = "/opt",
)

pkg_tar(
    name = "workspace_dirs",
    package_dir = "/workspace",
    empty_dirs = [
        "outputs",
        "models",
        "hf-home",
        "hf-cache",
        ".cache",
        ".torchinductor",
    ],
)

docker_build(
    name = "wan2gp_image",
    base = "@cuda_base//image",
    tars = [
        ":wan2gp_tar",
        ":start_scripts",
        ":workspace_dirs",
    ],
    runs = [
        "apt-get update -y && apt-get install -y --no-install-recommends git git-lfs curl ca-certificates ffmpeg aria2 tini jq build-essential python3-dev pkg-config libgl1 libglib2.0-0 libsm6 libxrender1 libxext6 python3 python3-pip wget curl cmake ninja-build",
        "git lfs install",
        "apt-get clean && rm -rf /var/lib/apt/lists/*",
        "python3 -m pip install --break-system-packages --extra-index-url https://download.pytorch.org/whl/cu128 torch==2.10.0+cu128 torchvision==0.25.0+cu128",
        "python3 -m pip install --break-system-packages --no-deps 'numpy<2.1' 'cython<3.2' 'setuptools<75'",
        "python3 -m pip install --break-system-packages /opt/Wan2GP/requirements.txt",
        "export TORCH_CUDA_ARCH_LIST='8.0;8.6;8.9;9.0;12.0' FORCE_CUDA='1' MAX_JOBS='1'",
        "git clone https://github.com/thu-ml/SageAttention.git /tmp/sageattention",
        "cd /tmp/sageattention && export EXT_PARALLEL=4 NVCC_APPEND_FLAGS='--threads 8' MAX_JOBS=32 && python3 -m pip install --break-system-packages --no-build-isolation .",
        "rm -rf /tmp/sageattention",
    ],
    env = {
        "CUDA_ARCHITECTURES": "8.0;8.6;8.9;9.0;12.0",
        "DEBIAN_FRONTEND": "noninteractive",
        "PYTHONUNBUFFERED": "1",
        "PIP_DISABLE_PIP_VERSION_CHECK": "1",
        "PIP_NO_CACHE_DIR": "1",
        "PIP_NO_BUILD_ISOLATION": "1",
        "WAN2GP_DIR": "/opt/Wan2GP",
        "WAN2GP_PORT": "7862",
        "JUPYTER_PORT": "8888",
        "WAN2GP_LOG": "/workspace/wan2gp.log",
        "HF_HOME": "/workspace/hf-home",
        "HUGGINGFACE_HUB_CACHE": "/workspace/hf-cache",
        "XDG_CACHE_HOME": "/workspace/.cache",
        "HF_HUB_ENABLE_HF_TRANSFER": "1",
        "MKL_THREADING_LAYER": "GNU",
        "GRADIO_SERVER_NAME": "0.0.0.0",
        "GRADIO_SERVER_PORT": "7862",
        "GRADIO_ROOT_PATH": "/",
        "GRADIO_ALLOW_FLAGGING": "never",
        "GRADIO_SHARE": "False",
        "GRADIO_USE_CDN": "False",
    },
    entrypoint = ["/usr/bin/tini", "-g", "--", "/bin/bash", "-c", "cd /opt/Wan2GP && /opt/start-wan2gp.sh"],
)

docker_push(
    name = "push_dockerhub_latest",
    image = ":wan2gp_image",
    format = "Docker",
    registry = "docker.io",
    repository = "stabldiff/wan2gp",
    tag = "latest",
)

docker_push(
    name = "push_dockerhub_tag",
    image = ":wan2gp_image",
    format = "Docker",
    registry = "docker.io",
    repository = "stabldiff/wan2gp",
    tag = "$(VERSION)",
)

alias(
    name = "push",
    actual = ":push_dockerhub_latest",
    visibility = ["//visibility:public"],
)

alias(
    name = "push-latest",
    actual = ":push_dockerhub_latest",
    visibility = ["//visibility:public"],
)

alias(
    name = "push-version",
    actual = ":push_dockerhub_tag",
    visibility = ["//visibility:public"],
)
