module(name = "wan2gp")

bazel_dep(name = "rules_docker", version = "0.25.0")
bazel_dep(name = "rules_pkg", version = "0.10.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "platforms", version = "0.0.10")

docker = use_extension("@rules_docker//repositories:repositories.bzl", "docker")
docker.pull(
    name = "cuda_base",
    tag = "12.8.0-cudnn-devel-ubuntu24.04",
    reference = "docker.io/nvidia/cuda",
)
use_repo(docker, "cuda_base")
