workspace(name = "wan2gp")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "io_bazel_rules_docker",
    remote = "https://github.com/bazelbuild/rules_docker.git",
    tag = "v0.14.4",
)

git_repository(
    name = "rules_pkg",
    remote = "https://github.com/bazelbuild/rules_pkg.git",
    tag = "0.10.0",
)

load(
    "@io_bazel_rules_docker//repositories:repositories.bzl",
    container_repositories = "repositories",
)
container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")
container_deps()

load("@io_bazel_rules_docker//container:pull.bzl", "container_pull")

container_pull(
    name = "cuda_base",
    registry = "docker.io",
    repository = "nvidia/cuda",
    tag = "12.8.0-cudnn-devel-ubuntu24.04",
)

container_pull(
    name = "wan2gp_base",
    registry = "docker.io",
    repository = "wan2gp/cuda-base",
    tag = "latest",
)

git_repository(
    name = "rules_pkg",
    remote = "https://github.com/bazelbuild/rules_pkg.git",
    tag = "0.10.0",
)

load("@io_bazel_rules_docker//repositories:repositories.bzl", "container_repositories = "repositories")
container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")
container_deps()
